--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Weather App/Weather.css">
+    <link rel="stylesheet" href="./Weather.css">
     <title>Weather App</title>
 </head>
 <body>
@@ -11,25 +11,25 @@
     <div class="card">
         <div class="search"> 
             <input type="text" placeholder="enter city name" spellcheck="false">
-            <button><img src="../Weather App/images/search.png"></button>
+            <button><img src="./images/search.png"></button>
         </div>
         <div class="error">
             <p>Invaild City Name</p>
         </div>
         <div class="weather">
-            <img src="../Weather App/images/rain.png" class="weather-icon">
+            <img src="./images/rain.png" class="weather-icon">
             <h1 class="temp">--°c</h1>
             <h2 class="city">--</h2>
             <div class="details">
                 <div class="col">
-                    <img src="../Weather App/images/humidity.png">
+                    <img src="./images/humidity.png">
                     <div>
                         <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="../Weather App/images/wind.png">
+                    <img src="./images/wind.png">
                     <div>
                         <p class="wind">50 km/h</p>
                         <p>wind speed</p>
@@ -37,6 +37,6 @@
             </div>
         </div>
     </div>
-    <script src="../Weather App/weather.js"></script>
+    <script src="./weather.js"></script>
 </body>
 </html>
